dep.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: techieglobus
spec:
  replicas: 3
  template:
    metadata:
      name: apache
      labels:
        env: beta 
    spec:
      containers:
      - image: httpd
        name: apache
