nodeselctorpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: httpd-gpu
spec:
  nodeSelector:               
    gpu: "true"               
  containers:
  - image: nginx
    name: nginx
