podns.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: nitin-pod
  name: samridh-test
  labels:
    creation_method: manual
    env: pod
spec:
  containers:
  - image: httpd
    name: samridhk
    ports:
    - containerPort: 8082
      protocol: TCP
