podtest.yaml
apiVersion: v1
kind: Pod
metadata:
  name: samridh4-test
  labels:
    env: test
spec:
  containers:
  - image: httpd
    name: samridhk
    ports:
    - containerPort: 8082
      protocol: TCP
