deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysvc
spec:
  type: LoadBalancer
  selector:
    env: beta
  ports:
  - port: 80
    targetPort: 8080
