nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mynodeport1
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30125
  selector:
    env: beta
