ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
 
spec:
 rules:
 - host: hello-world.info
   http:
     paths:
     - path: /
       backend:
         serviceName: web
         servicePort: 80
